@@ -842,17 +842,6 @@ static WebKitWebView* webInspectorInspectWebView(WebKitWebInspector*, gpointer d
     return WEBKIT_WEB_VIEW(webView);
 }
 
-static void webViewLoadStatusNotified(WebKitWebView* view, gpointer user_data)
-{
-    WebKitLoadStatus loadStatus = webkit_web_view_get_load_status(view);
-
-    if (loadStatus == WEBKIT_LOAD_PROVISIONAL) {
-        char* frameName = getFrameNameSuitableForTestResult(view, mainFrame);
-        printf("%s - didStartProvisionalLoadForFrame\n", frameName);
-        g_free(frameName);
-    }
-}
-
 static WebKitWebView* createWebView()
 {
     WebKitWebView* view = WEBKIT_WEB_VIEW(webkit_web_view_new());
@@ -879,10 +868,6 @@ static WebKitWebView* createWebView()
                      "signal::document-load-finished", webViewDocumentLoadFinished, 0,
                      "signal::geolocation-policy-decision-requested", geolocationPolicyDecisionRequested, 0,
                      "signal::onload-event", webViewOnloadEvent, 0,
-                     NULL);
-
-    g_signal_connect(view,
-                     "notify::load-status", G_CALLBACK(webViewLoadStatusNotified),
                      NULL);
 
     WebKitWebInspector* inspector = webkit_web_view_get_inspector(view);
