@@ -1,3 +1,14 @@
+2010-03-28  Gustavo Noronha Silva  <gns@gnome.org>
+
+        No review, rolling out r56679.
+        http://trac.webkit.org/changeset/56679
+        https://bugs.webkit.org/show_bug.cgi?id=36454
+
+        Lots of tests broken.
+
+        * DumpRenderTree/gtk/DumpRenderTree.cpp:
+        (createWebView):
+
 2010-03-28  Chris Jerdonek  <cjerdonek@webkit.org>
 
         Unreviewed.
